syntax = "proto3";

package config.v1;

import "gnostic/openapi/v3/annotations.proto";
import "validate/validate.proto";

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/api/gen/go/config/v1;configv1";
option java_multiple_files = true;
option java_outer_classname = "StorageProto";
option java_package = "com.github.origadmin.api.runtime.config.v1";
option objc_class_prefix = "ORC";

// The message definition remains the same... (Migration, Database, Redis, Memcached, Memory, Oss, Mongo, Cache)

message Migration {
  bool enabled = 1 [
    json_name = "enabled",
    (gnostic.openapi.v3.property) = {description: "whether to enable migration"}
  ];
  string path = 2 [
    json_name = "path",
    (gnostic.openapi.v3.property) = {description: "migration path"}
  ];
  repeated string names = 3 [
    json_name = "names",
    (gnostic.openapi.v3.property) = {description: "migration name"}
  ];
  string version = 4 [
    json_name = "version",
    (gnostic.openapi.v3.property) = {description: "migration version"}
  ];
  string mode = 5 [
    json_name = "mode",
    (gnostic.openapi.v3.property) = {description: "migration mode"}
  ];
}

// Database
message Database {
  // Debugging
  bool debug = 1 [
    json_name = "debug",
    (gnostic.openapi.v3.property) = {description: "whether to enable debug mode "}
  ];
  // Dialect name: mysql, postgresql, mongodb, sqlite......
  string dialect = 2 [
    json_name = "dialect",
    (validate.rules).string = {
      in: [
        "mssql",
        "mysql",
        "postgresql",
        "mongodb",
        "sqlite",
        "oracle",
        "sqlserver",
        "sqlite3"
      ]
    },
    (gnostic.openapi.v3.property) = {description: "database driver name"}
  ];
  // Data source (DSN string)
  string source = 3 [
    json_name = "source",
    (gnostic.openapi.v3.property) = {description: "data source dsn string"}
  ];
  // Data migration
  Migration migration = 10 [
    json_name = "migration",
    (gnostic.openapi.v3.property) = {description: "data migration"}
  ];
  // Link tracking switch
  bool enable_trace = 12 [
    json_name = "enable_trace",
    (gnostic.openapi.v3.property) = {description: "link tracking switch"}
  ];
  // Performance analysis switch
  bool enable_metrics = 13 [
    json_name = "enable_metrics",
    (gnostic.openapi.v3.property) = {description: "performance analysis switch"}
  ];
  // Maximum number of free connections in the connection pool
  int32 max_idle_connections = 20 [
    json_name = "max_idle_connections",
    (gnostic.openapi.v3.property) = {description: "The maximum number of free connections in the connection pool"}
  ];
  // Maximum number of open connections in the connection pool
  int32 max_open_connections = 21 [
    json_name = "max_open_connections",
    (gnostic.openapi.v3.property) = {description: "The maximum number of open connections in the connection pool"}
  ];
  // Maximum length of time that the connection can be reused
  int64 connection_max_lifetime = 22 [
    json_name = "connection_max_lifetime",
    (gnostic.openapi.v3.property) = {description: "The maximum length of time a connection can be reused"}
  ];
  // Maximum number of connections in the connection pool for reading
  int64 connection_max_idle_time = 23 [
    json_name = "connection_max_idle_time",
    (gnostic.openapi.v3.property) = {description: "The maximum number of connections in the connection pool for reading"}
  ];
}

// Redis
message Redis {
  string network = 1 [
    json_name = "network",
    (gnostic.openapi.v3.property) = {description: "network type"}
  ];
  string addr = 2 [
    json_name = "addr",
    (gnostic.openapi.v3.property) = {description: "address"}
  ];
  string password = 3 [
    json_name = "password",
    (gnostic.openapi.v3.property) = {description: "cipher"}
  ];
  int32 db = 4 [
    json_name = "db",
    (gnostic.openapi.v3.property) = {description: "database index"}
  ];
  int64 dial_timeout = 5 [
    json_name = "dial_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "dial timeout"}
  ];
  int64 read_timeout = 6 [
    json_name = "read_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "read timeout"}
  ];
  int64 write_timeout = 7 [
    json_name = "write_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "write timeout"}
  ];
}

// Memcached
message Memcached {
  string addr = 1 [
    json_name = "addr",
    (gnostic.openapi.v3.property) = {description: "address"}
  ];
  string username = 2 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {description: "username"}
  ];
  string password = 3 [
    json_name = "password",
    (gnostic.openapi.v3.property) = {description: "cipher"}
  ];
  int32 max_idle = 4 [
    json_name = "max_idle",
    (gnostic.openapi.v3.property) = {
      description: "maximum number of idle connections"
      minimum: 1
    }
  ];
  int64 timeout = 5 [
    json_name = "timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "overtime"}
  ];
}

// Memory
message Memory {
  int32 size = 1 [
    json_name = "size",
    (gnostic.openapi.v3.property) = {description: "size"}
  ];
  int32 capacity = 2 [
    json_name = "capacity",
    (gnostic.openapi.v3.property) = {description: "capacity"}
  ];
  int64 expiration = 3 [
    json_name = "expiration",
    (gnostic.openapi.v3.property) = {description: "expiration time"}
  ];
  int64 cleanup_interval = 4 [
    json_name = "cleanup_interval",
    (gnostic.openapi.v3.property) = {description: "clearance interval"}
  ];
}

// Mongo
message Mongo {
  string uri = 1 [
    json_name = "uri",
    (gnostic.openapi.v3.property) = {description: "MongoDB connection URI"}
  ];
  string database = 2 [
    json_name = "database",
    (gnostic.openapi.v3.property) = {description: "Database name"}
  ];
  string username = 3 [json_name = "username", (gnostic.openapi.v3.property) = {description: "username"}];
  string password = 4 [json_name = "password", (gnostic.openapi.v3.property) = {description: "password"}];
  bool auth_source = 5 [json_name = "auth_source", (gnostic.openapi.v3.property) = {description: "auth source"}];
  int32 max_pool_size = 6 [json_name = "max_pool_size", (gnostic.openapi.v3.property) = {description: "max pool size"}];
  int32 min_pool_size = 7 [json_name = "min_pool_size", (gnostic.openapi.v3.property) = {description: "min pool size"}];
  int64 connect_timeout = 8 [
    json_name = "connect_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "Connection timeout in milliseconds"}
  ];
}

// Cache
message Cache {
  // Driver name: redis, memcached, etc.
  string driver = 1 [
    json_name = "driver",
    (validate.rules).string = {
      in: [
        "none",
        "redis",
        "memcached",
        "memory"
      ]
    },
    (gnostic.openapi.v3.property) = {description: "cache driver name"}
  ];
  string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "cache name"}
  ];
  // Memcached
  Memcached memcached = 10 [
    json_name = "memcached",
    (gnostic.openapi.v3.property) = {description: "memcached cache configuration"}
  ];
  // Memory cache
  Memory memory = 11 [
    json_name = "memory",
    (gnostic.openapi.v3.property) = {description: "memory cache configuration"}
  ];
  // Redis
  Redis redis = 12 [
    json_name = "redis",
    (gnostic.openapi.v3.property) = {description: "redis cache configuration"}
  ];
  // Cleanup interval for memory cache in seconds.
  // If 0 or not set, a default (e.g., 5 minutes) will be used.
  int64 cleanup_interval = 13 [
    json_name = "cleanup_interval",
    (gnostic.openapi.v3.property) = {description: "Cleanup interval for memory cache in seconds."}
  ];
}

// OSS defines the configuration for cloud object storage.
message Oss {
  string endpoint = 1 [
    json_name = "endpoint",
    (gnostic.openapi.v3.property) = {description: "Storage service endpoint"}
  ];
  string access_key_id = 2 [json_name = "access_key_id"];
  string access_key_secret = 3 [json_name = "access_key_secret"];
  string bucket = 4 [json_name = "bucket"];
  string region = 5 [json_name = "region"];
  bool ssl = 6 [json_name = "ssl"];
  int64 connect_timeout = 7 [
    json_name = "connect_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "Connection timeout in milliseconds"}
  ];
  int64 read_timeout = 8 [
    json_name = "read_timeout",
    (validate.rules).int64.gte = 0,
    (gnostic.openapi.v3.property) = {description: "Read timeout in milliseconds"}
  ];
}

// =================================================================
//                    REFACTORED CONFIGURATION
// =================================================================

// FileLocal defines the configuration for local file system storage.
// Renamed from 'File' to avoid ambiguity.
message FileLocal {
  string root = 1 [
    json_name = "root",
    (gnostic.openapi.v3.property) = {description: "root directory"}
  ];
}

// FileStore groups all "file/object storage" type backends into one category.
// It uses the 'driver' field to determine which specific implementation to use.
message FileStore {
  // The 'driver' field determines which configuration block (local or oss) to use.
  // This field is crucial for ensuring JSON/YAML compatibility.
  string driver = 1 [
    json_name = "driver",
    (validate.rules).string = {in: ["local", "oss"]},
    (gnostic.openapi.v3.property) = {description: "file store driver name"}
  ];

  // Local file system configuration. Only effective when driver is "local".
  // The optional keyword clearly indicates that this field may not be present.
  optional FileLocal local = 2 [json_name = "local", (gnostic.openapi.v3.property) = {description: "local file system configuration"}];

  // Cloud object storage configuration. Only effective when driver is "oss".
  optional Oss oss = 3 [json_name = "oss", (gnostic.openapi.v3.property) = {description: "cloud object storage configuration}
}];

  // Chunk size in bytes for splitting large files.
  // For OSS, this corresponds to the multipart upload part size.
  // For local storage, it defines the size of individual blob files.
  // If 0 or not set, a reasonable default (e.g., 4MB) will be used by the implementation.
  int64 chunk_size = 4 [json_name = "chunk_size", (gnostic.openapi.v3.property) = {description: "chunk size in bytes"}];
}


// Storage is the top-level configuration, and its structure is now compatible with all parsers.
message Storage {
  // Map of named FileStore configurations.
  map<string, FileStore> filestores = 1 [json_name = "filestores", (gnostic.openapi.v3.property) = {description: "map of named FileStore configurations"}];

  // Map of named Cache configurations.
  map<string, Cache> caches = 2 [json_name = "caches", (gnostic.openapi.v3.property) = {description: "map of named Cache configurations"}];

  // Map of named Database configurations.
  map<string, Database> databases = 3 [json_name = "databases", (gnostic.openapi.v3.property) = {description: "map of named Database configurations"}];

  // Optional: Default instance names for each type.
  optional string default_filestore = 4 [json_name = "default_filestore", (gnostic.openapi.v3.property) = {description: "default filestore name"}];
  optional string default_cache = 5 [json_name = "default_cache", (gnostic.openapi.v3.property) = {description: "default cache name"}];
  optional string default_database = 6 [json_name = "default_database", (gnostic.openapi.v3.property) = {description: "default database name"}];
}