syntax = "proto3";

package storage.v1;

import "validate/validate.proto";

option cc_enable_arenas = true;
option csharp_namespace = "OrigAdmin.Runtime.Storage.V1";
option go_package = "github.com/origadmin/runtime/api/gen/go/storage/v1;storagev1";
option java_multiple_files = true;
option java_outer_classname = "StorageProto";
option java_package = "com.github.origadmin.api.runtime.storage.v1";
option objc_class_prefix = "ORS";
option php_namespace = "OrigAdmin\\Runtime\\Storage\\V1";

message FileMeta {
  string id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string hash = 3 [json_name = "hash"];
  int64 size = 4 [json_name = "size"];
  string mime_type = 5 [json_name = "mime_type"];
  int64 mod_time = 6 [json_name = "mod_time"];
}
